--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
