--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - /app/node_modules
     environment:
       - VITE_API_URL=http://localhost:5000
-      - API_TARGET=http://server:5000
+      - API_TARGET=https://saas-revenue-leakage-calculator.onrender.com
     depends_on:
       - server
     restart: unless-stopped
